Fixed scrollbar

--- a/client/style/styles.css
+++ b/client/style/styles.css
@@ -7,10 +7,6 @@ body, html {
     height: 100%;
 }
 
-::-webkit-scrollbar {
-    display: none;
-}
-
 body {
     background-image: url("../img/background.jpg");
     background-size: cover;
